--- a/style.css
+++ b/style.css
@@ -1,15 +1,123 @@
-.date {
-     display: inline-block;
-	 margin-right: 25px;
-    }
-.select {
-     display: inline-block;
-	 margin-right: 25px;
-    }
-.wrapper {position: relative;}
-.box {
-  height: 100px;
-  position: absolute;
-  top: 50%;
-  margin: -20px 0 0 287px;
+body {
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    min-width: 400px;
+    max-width: 1024px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+h1 {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 32pt;
+    font-weight: 600;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#main {
+    display: flex;
+}
+
+#main-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+#container-forms {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+#forms {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+span {
+    display: block;
+}
+
+#dates,
+#persons {
+    width: 200px;
+    height: 120px;
+
+}
+
+input {
+    width: 80%;
+    height: 25px;
+    padding: 0;
+    border-radius: 5px;
+    outline: none;
+}
+
+select {
+    width: calc(80% + 4px);
+    height: 29px;
+    padding: 1px;
+    border-radius: 5px;
+}
+
+#forms span {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 10pt;
+    padding: 3px;
+}
+
+#buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 400px;
+}
+
+.button {
+    border-radius: 5px;
+    padding: 15px 0;
+    width: 200px;
+}
+
+#result {
+    width: 100%;
+    border-radius: 5px;
+    margin-right: 40px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+}
+
+button {
+    background-color: #4eba34;
+    color: #eafced;
+    border: none;
+    width: 164px;
+    height: 30px;
+    border-radius: 5px;
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 12pt;
+    font-weight: 600;
+}
+
+#reset {
+    background-color: #f53a3a;
+}
+
+button,
+button:active,
+button:focus {
+    outline: none;
 }
