--- a/style.css
+++ b/style.css
@@ -11,33 +11,6 @@ body {
     font-weight: 400;
 }
 
-@media all and (orientation: portrait) {
-    body {
-        left: auto;
-        right: auto;
-        top: 50px;
-        transform: none;
-        width: 90%;
-        font-size: 24pt;
-    }
-
-    #container {
-        width: 100%;
-    }
-
-    #main-wrap {
-        width: 100%;
-    }
-
-    #dates,
-    #persons {
-        width: 100%!important;
-    }
-    
-    #forms {
-        flex-direction: column;
-    }
-}
 
 h1 {
     font-family: 'Segoe UI';
@@ -92,7 +65,6 @@ input {
     border-radius: 5px;
     outline: none;
     border: 1px solid #e5e5e5;
-    font-family: 'Segoe UI';
 }
 
 select {
@@ -158,4 +130,101 @@ button,
 button:active,
 button:focus {
     outline: none;
+}
+
+@media all and (orientation: portrait) {
+    body {
+        left: auto;
+        right: auto;
+        top: 0;
+        transform: none;
+        width: 100%;
+        height: 100%;
+        font-size: 40pt;
+        justify-content: flex-start;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI';
+    }
+
+    #container {
+        width: 100vw;
+    }
+
+    #main-wrap {
+        width: 100vw;
+        height: 55vh;
+        margin-bottom: 5vh;
+    }
+
+    #container-forms {
+        width: 100vw;
+        height: 40vh;
+    }
+
+    #dates,
+    #persons {
+        width: 100vw;
+        height: auto;
+    }
+
+    #forms {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 64pt;
+        font-weight: 600;
+        padding: 0 20px;
+    }
+
+    #buttons {
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5vh;
+    }
+
+    .button {
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button {
+        width: 80%;
+        height: 7vh;
+        font-size: 40pt;
+    }
+
+    #forms span {
+        font-size: 30pt;
+        padding: 10px 15px;
+        font-family: 'Segoe UI';
+    }
+
+    input {
+        width: 92vw;
+        height: 80px;
+        border: 3px solid #3f6af7;
+        font-size: 30pt;
+        margin: 0 2vw;
+        font-family: 'Segoe UI';
+        padding: 0 2vw;
+    }
+
+    select {
+        width: 96vw;
+        padding: 1px;
+        height: 80px;
+        border: 3px solid #ffa223;
+        font-size: 30pt;
+        margin: 0 2vw;
+        font-family: 'Segoe UI';
+                padding: 0 2vw;
+    }
 }
