--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 body {
     display: flex;
-    position: fixed;
     flex-direction: column;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 10px;
     font-family: 'Segoe UI';
     font-size: 10pt;
     font-weight: 400;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
 }
 
 
@@ -59,12 +58,14 @@ span {
 }
 
 input {
-    width: 80%;
+    width: calc(80% - 3px);
     height: 25px;
-    padding: 0;
+    padding-left: 5px;
     border-radius: 5px;
     outline: none;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #b5b1b1;
+    font-size: 10pt;
+    font-family: 'Segoe UI';
 }
 
 select {
@@ -73,12 +74,14 @@ select {
     padding: 1px;
     border-radius: 5px;
     outline: none;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #b5b1b1;
+    font-size: 10pt;
+    font-family: 'Segoe UI';
 }
 
 #forms span {
     font-family: 'Segoe UI';
-    font-size: 11pt;
+    font-size: 10.5pt;
     font-weight: 600;
     padding: 5px;
 }
@@ -110,8 +113,9 @@ button {
     background-color: #4eba34;
     color: #eafced;
     border: none;
+    border-bottom: 2px solid #357725;
     width: 164px;
-    height: 30px;
+    height: 32px;
     border-radius: 5px;
     font-family: 'Segoe UI';
     font-size: 12pt;
@@ -120,6 +124,7 @@ button {
 
 #reset {
     background-color: #f53a3a;
+    border-bottom: 2px solid #8e0a0a;
 }
 
 button:hover {
@@ -229,7 +234,7 @@ button:focus {
         display: flex;
         align-items: center;
     }
-    
+
     option {
         font-size: 30%;
     }
