buttons fixes, add google fonts

--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
     justify-content: flex-start;
     align-items: center;
     height: 100%;
-   background-color: #f1f1f1;
+    background-color: #f1f1f1;
 }
-
 
 h1 {
     font-family: 'Segoe UI';
@@ -113,20 +112,14 @@ select {
 button {
     background-color: #4eba34;
     background: linear-gradient(to top, #4eba34, #3b9525);
-    color: #eafced;
+    color: #ffffff;
     border: none;
     border-bottom: 2px solid #357725;
     width: 164px;
     height: 32px;
     border-radius: 5px;
-    font-family: 'Segoe UI';
+    font-family: 'Montserrat', sans-serif;
     font-size: 12pt;
-    font-weight: 600;
-}
-
-button:hover {
-    background-color: #33cc0e;
-
 }
 
 #reset {
@@ -137,7 +130,19 @@ button:hover {
 
 button:hover {
     cursor: pointer;
-    background-color: #4eba34;
+    background: linear-gradient(to top, #45af2c, #32861d);
+}
+
+button:active {
+    border-bottom: none;
+}
+
+#reset:hover {
+    background: linear-gradient(to top, #dd3636, #b70a0a);
+}
+
+#reset:active {
+    border-bottom: none;
 }
 
 button,
@@ -215,7 +220,6 @@ button:focus {
     }
 
     #reset {
-
         border-bottom: 1vw solid #8e0a0a;
     }
 
