--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ button {
     border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
     font-size: 12pt;
+    font-weight: 600;
 }
 
 #reset {
@@ -135,6 +136,8 @@ button:hover {
 
 button:active {
     border-bottom: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
 }
 
 #reset:hover {
@@ -143,6 +146,8 @@ button:active {
 
 #reset:active {
     border-bottom: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
 }
 
 button,
