--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     height: 100%;
-    background-color: #f1f1f1;
+    background-color: #efeed6;
 }
 
 h1 {
@@ -110,44 +110,30 @@ select {
 }
 
 button {
-    background-color: #4eba34;
-    background: linear-gradient(to top, #4eba34, #3b9525);
-    color: #ffffff;
+    background-color: #00a046;
+    color: #e8e8e8;
     border: none;
-    border-bottom: 2px solid #357725;
     width: 164px;
-    height: 32px;
+    height: 30px;
     border-radius: 5px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 12pt;
-    font-weight: 600;
+    font-family: "OpenSans-Bold", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
 }
 
 #reset {
-    background-color: #f53a3a;
-    background: linear-gradient(to top, #f53a3a, #c90c0c);
-    border-bottom: 2px solid #8e0a0a;
+    background-color: #dd3636;
 }
 
 button:hover {
     cursor: pointer;
-    background: linear-gradient(to top, #45af2c, #32861d);
-}
-
-button:active {
-    border-bottom: none;
-    margin-bottom: -3px;
-    margin-top: 3px;
+    background-color: #00bc52;
 }
 
 #reset:hover {
-    background: linear-gradient(to top, #dd3636, #b70a0a);
-}
-
-#reset:active {
-    border-bottom: none;
-    margin-bottom: -3px;
-    margin-top: 3px;
+    background-color: rgb(255, 4, 4);
 }
 
 button,
