--- a/style.css
+++ b/style.css
@@ -100,13 +100,37 @@ select {
 }
 
 #result {
-    width: 100%;
-    border-radius: 5px;
-    margin-right: 40px;
-    height: 60px;
-    display: flex;
+    display: grid;
     align-items: center;
-    padding: 0 10px;
+    padding: 0;
+    grid-template-columns: 1.3fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1.1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    height: calc(20px*5 + 25px + 12px);
+    width: calc(125px * 6);
+    box-sizing: border-box;
+    grid-gap: 1px;
+    border: 1px solid #000;
+    background-color: #000;
+}
+
+.table-vacation {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    min-height: 20px;
+    background-color: #b6f4f4;
+}
+
+.first-line {
+    font-weight: 600;
+}
+
+.second-line,
+.fourth-line,
+.sixth-line {
+    background-color: #3687d8;
 }
 
 button {
