--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ h1 {
     font-weight: 600;
 }
 
+#splashscreen {
+    position: absolute;
+    background-color: black;
+    width: 364px;
+    height: 0px;
+    opacity: 0.9;
+    transition: 1s;
+    animation: fade 0.5s;
+    display: flex;
+    flex-direction: column;
+}
+
+#splashscreen div {
+    color: white;
+    font-size: 12px;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
 #container {
     display: flex;
     flex-direction: column;
@@ -95,12 +114,12 @@ select {
 
 .button {
     border-radius: 5px;
-    padding: 15px 0;
-    width: 200px;
+    padding: 10px 0 5px 0;
+    width: 50%;
 }
 
 #result {
-    display: grid;
+    display: none;
     align-items: center;
     padding: 0;
     grid-template-columns: 1.3fr 1fr 1fr 1fr 1fr 1fr;
@@ -151,6 +170,11 @@ button {
     background-color: #dd3636;
 }
 
+#check,
+#check_v2 {
+    background-color: #447af5;
+}
+
 button:hover {
     cursor: pointer;
     background-color: #00bc52;
@@ -159,6 +183,12 @@ button:hover {
 #reset:hover {
     background-color: rgb(255, 4, 4);
 }
+
+#check:hover,
+#check_v2:hover {
+    background-color: #2129f5;
+}
+
 
 button,
 button:active,
