--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
     width: 364px;
     height: 0px;
     opacity: 0.9;
-    transition: 1s;
+    transition: 0.5s;
     animation: fade 0.5s;
     display: flex;
     flex-direction: column;
@@ -34,6 +34,8 @@ h1 {
     font-size: 12px;
     padding-top: 10px;
     padding-left: 10px;
+    transition: 2s;
+    animation: fade 0.5s;
 }
 
 #container {
